# ChangeLog for net-im/kadu-encryption_otr
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kadu-encryption_otr-2.0_alpha1 (08 Jan 2015)
*kadu-encryption_otr-1.4 (08 Jan 2015)
*kadu-encryption_otr-1.3 (08 Jan 2015)
*kadu-encryption_otr-1.2 (08 Jan 2015)
*kadu-encryption_otr-1.1 (08 Jan 2015)
*kadu-encryption_otr-1.0 (08 Jan 2015)

  08 Jan 2015; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-encryption_otr-1.0.ebuild, +kadu-encryption_otr-1.1.ebuild,
  +kadu-encryption_otr-1.2.ebuild, +kadu-encryption_otr-1.3.ebuild,
  +kadu-encryption_otr-1.4.ebuild, +kadu-encryption_otr-2.0_alpha1.ebuild:
  Renamed ebuild. Had the wrong name the whole time, oops.

*kadu-otr-2.0_alpha1 (04 Jan 2015)

  04 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-otr-2.0_alpha1.ebuild:
  Bumped.

*kadu-otr-1.4 (02 Jan 2015)

  02 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-otr-1.4.ebuild:
  Bumped.

*kadu-otr-1.3 (13 Dec 2014)

  13 Dec 2014; Michał Ziąbkowski <mziab@o2.pl> +kadu-otr-1.3.ebuild:
  Bumped.

*kadu-otr-1.2 (07 Nov 2014)

  07 Nov 2014; Michał Ziąbkowski <mziab@o2.pl> +kadu-otr-1.2.ebuild:
  Bumped.

*kadu-otr-1.1 (18 Oct 2014)

  18 Oct 2014; Michał Ziąbkowski <mziab@o2.pl> +kadu-otr-1.1.ebuild:
  Bumped.

  01 Oct 2014; Michał Ziąbkowski <mziab@o2.pl> -kadu-otr-1.0_alpha2.ebuild,
  -kadu-otr-1.0_alpha3.ebuild, -kadu-otr-1.0_alpha4.ebuild,
  -kadu-otr-1.0_alpha5.ebuild, -kadu-otr-1.0_rc1.ebuild,
  -kadu-otr-1.0_rc2.ebuild, -kadu-otr-1.0_rc3.ebuild, -kadu-otr-1.0_rc4.ebuild,
  -kadu-otr-1.0_rc5.ebuild, -kadu-otr-1.0_rc7.ebuild, -kadu-otr-1.0_rc8.ebuild,
  -kadu-otr-1.0_rc9.ebuild, -kadu-otr-1.0_rc10.ebuild,
  -kadu-otr-1.0_rc11.ebuild:
  Removed 1.0_alpha modules.

  01 Oct 2014; Michał Ziąbkowski <mziab@o2.pl> -kadu-otr-1.0_rc1.ebuild,
  -kadu-otr-1.0_rc2.ebuild, -kadu-otr-1.0_rc3.ebuild, -kadu-otr-1.0_rc4.ebuild,
  -kadu-otr-1.0_rc5.ebuild, -kadu-otr-1.0_rc7.ebuild, -kadu-otr-1.0_rc8.ebuild,